# be-paydaal

./: README.md
backend/: pyproject.toml
backend/src/infrastructure/: database.py  uow.py
backend/src/infrastructure/models/: deal_products.py  olx_accounts.py  products.py  queries.py  users.py
